<resources>
    <string name="app_name">Events Manager</string>
    <string name="title_create_event">Create Event</string>
    <string name="hint_event_name">Event Name</string>
    <string name="hint_location">Location</string>
    <string name="hint_description">Description</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="hint_capacity">Capacity</string>
    <string name="btn_create_event">Create Event</string>

    <!-- Register strings -->
    <string name="title_register">Register</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_register">Register</string>
    <string name="text_have_account">Already have an account? Login</string>

    <!-- Login strings -->
    <string name="title_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="btn_login">Log In</string>
    <string name="text_no_account">Don\'t have an account? Register</string>
</resources>